# hologres-ai-plugins

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README_CN.md
.qoder/repowiki/en/content/: Getting Started.md  Project Overview.md  Testing and Development.md  Troubleshooting and FAQ.md
.qoder/repowiki/en/content/AI Agent Skills/: AI Agent Skills.md  Hologres CLI Skill.md  Query Optimizer Skill.md  Slow Query Analysis Skill.md
.qoder/repowiki/en/content/API Reference/: API Reference.md  Audit Logging API.md  Command-Line Interface.md  Connection Management API.md  Output Formatting API.md  Safety Guardrail API.md
.qoder/repowiki/en/content/Configuration and Environment/: Audit Logging and History Management.md  Configuration and Environment.md  DSN Configuration and Connection Management.md  Environment Variables and Runtime Configuration.md
.qoder/repowiki/en/content/Hologres CLI Tool/: AI Agent Integration.md  Connection Management.md  Hologres CLI Tool.md  Installation and Setup.md  Output Formatting and Response Structure.md  Safety and Security Features.md
.qoder/repowiki/en/content/Hologres CLI Tool/Core CLI Commands/: Core CLI Commands.md  Data Commands.md  SQL Commands.md  Schema Commands.md  System and Status Commands.md
.qoder/repowiki/en/meta/: repowiki-metadata.json
agent-skills/: .gitignore  README.md  README_CN.md  publish_to_aone.py  pyproject.toml  upload_to_pypi.py
agent-skills/skills/hologres-ad-campaign/: SKILL.md
agent-skills/skills/hologres-bsi-profile-analysis/: SKILL.md  package.json
agent-skills/skills/hologres-cli/: SKILL.md  package.json
agent-skills/skills/hologres-cli/references/: commands.md  safety-features.md
agent-skills/skills/hologres-cli/tests/: test_skill_structure.py
agent-skills/skills/hologres-privileges/: SKILL.md
agent-skills/skills/hologres-query-optimizer/: SKILL.md  package.json
agent-skills/skills/hologres-query-optimizer/references/: guc-parameters.md
agent-skills/skills/hologres-schema-generator/: SKILL.md
agent-skills/skills/hologres-slow-query-analysis/: SKILL.md  package.json
agent-skills/skills/hologres-uv-compute/: SKILL.md
agent-skills/src/holo_plugin_installer/: __init__.py  main.py
agent-skills/tests/: test_publish_to_aone.py
hologres-cli/: .gitignore  README.md  pyproject.toml  upload_to_pypi.py
hologres-cli/src/hologres_cli/: __init__.py  config_store.py  connection.py  logger.py  main.py  masking.py  output.py
hologres-cli/src/hologres_cli/commands/: __init__.py  config.py  data.py  dt.py  extension.py  guc.py  instance.py  partition.py  schema.py  sql.py  status.py  table.py  view.py  warehouse.py
hologres-cli/tests/: __init__.py  conftest.py  test_config_store.py  test_connection.py  test_logger.py  test_main.py  test_masking.py  test_output.py
hologres-cli/tests/integration/: __init__.py  conftest.py  test_connection_live.py  test_data_live.py  test_instance_live.py  test_output_format_live.py  test_schema_live.py  test_sql_live.py  test_status_live.py  test_table_live.py  test_warehouse_live.py
hologres-cli/tests/test_commands/: test_config.py  test_data.py  test_dt.py  test_extension.py  test_guc.py  test_instance.py  test_partition.py  test_schema.py  test_sql.py  test_status.py  test_table.py  test_view.py  test_warehouse.py
